--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           pkgname: dpw
           pkgbuild: ./PKGBUILD
+          assets:
+            dpw
+            dpw.fish
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
