Generate PKGBUILD automatically

--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Generate PKGBUILD
+        run: bash ./generate-pkgbuild.bash
+
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v3.0.1
         with:
