--- a/.github/workflows/aur-publish.yml
+++ b/.github/workflows/aur-publish.yml
@@ -13,13 +13,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Generate PKGBUILD
-        run: bash ./generate-pkgbuild.bash
+        run: bash .github/workflows/generate-pkgbuild.bash
 
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v3.0.1
         with:
           pkgname: dpw
-          pkgbuild: ./PKGBUILD
+          pkgbuild: PKGBUILD
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
